# maze.land

./: Makefile  docker-compose.yml  lastadija.txt
kosmos/: .gitignore  Makefile  Maze.pgf  README.md  default.nix  kosmos  kosmos.cabal  kosmos.nix
kosmos/jsbits/: kosmos.js
kosmos/src/: Kosmos.hs  Maze.hs  Riga.hs
kosmos/src-cli/: kosmos-cli.hs
lambdas/transcode/: Makefile  index.js
maze-api/: Dockerfile  Gemfile
maze-api/app/controllers/: clipfiles_controller.rb  clips_controller.rb  doors_controller.rb  mazes_controller.rb  spots_controller.rb
maze-api/app/jobs/: transcode_job.rb
maze-api/app/models/: clip.rb  clipfile.rb  door.rb  maze.rb  spot.rb
maze-api/config/: application.rb  database.yml  routes.rb  secrets.yml
maze-api/config/environments/: production.rb
maze-api/config/initializers/: cors.rb
maze-api/db/: schema.rb
maze-api/db/migrate/: 20170808125126_create_mazes.rb  20170808125253_add_slug_to_maze.rb  20170808141953_create_clips.rb  20170808151708_create_clipfiles.rb  20170808205352_add_clip_id_to_clipfile.rb  20170808211125_dont_use_type_as_column_name.rb  20170809063600_dont_use_hash_as_column_name.rb  20170809071926_add_path_to_clipfile.rb  20170809093808_add_clip_to_spot.rb  20170809103229_add_maze_to_spot.rb  20170809151955_create_doors.rb
maze-api/test/controllers/: clipfiles_controller_test.rb  clips_controller_test.rb  mazes_controller_test.rb
maze-api/test/fixtures/: clipfiles.yml
maze-api/test/jobs/: transcode_job_test.rb
maze-api/test/models/: clipfile_test.rb  maze_test.rb
maze-pgf/: .gitignore  Dockerfile  Makefile  Maze.gf  Maze.gfo  Maze.hs  Maze.pgf  MazeEng.gf  MazeEng.gfo  MazeI.gf  MazeLav.gf  MazeLav.gfo  MazeLav2.gf  MazeSwe.gf  MazeSwe.gfo  Riga.gf  Riga.hs  RigaEng.gf  RigaLav.gf  RigaLav2.gf  RigaSwe.gf  derive
maze-put/: Dockerfile  index.js
maze-www/: buildings.json  grammar.js  index.css  index.html  index.js  last2.json  lastadija.json
maze-www/lib/: gflib.js
test/: .gitignore  Test.gf  TestEng.gf  TestI.gf
