name: kosmos
version: 0.5
synopsis:
 Semantics for grammatical mazes
homepage:
 https://github.com/mbrock/kosmos
license: AGPL-3
license-file: LICENSE
author: Mikael Brockman
maintainer: mikael@brockman.se
build-type: Simple
cabal-version: >= 1.10

library
 exposed-modules:
  Kosmos, Riga
 ghc-options: -Wall
 hs-source-dirs: src
 default-language: Haskell2010
 default-extensions:
  BangPatterns,
  LambdaCase,
  OverloadedStrings,
  GeneralizedNewtypeDeriving,
  DeriveDataTypeable,
  DeriveGeneric
 build-depends:
  base >= 4.9 && < 4.10,
  haskeline == 0.7.*,
  gf >= 3.8 && <= 4.0,
  mtl >= 2.2.1 && < 2.3,
  containers >= 0.5 && <= 0.6
  
executable kosmos
 default-language: Haskell2010
 hs-source-dirs: src-cli
 main-is: kosmos-cli.hs
 ghc-options: -Wall
 build-depends: kosmos,
  base >= 4.9 && < 4.10
