name: kosmos
version: 0.5
synopsis:
 Semantics for grammatical mazes
homepage:
 https://github.com/mbrock/kosmos
license: AGPL-3
license-file: LICENSE
author: Mikael Brockman
maintainer: mikael@brockman.se
build-type: Simple
cabal-version: >= 1.10

library
 exposed-modules:
  Kosmos, Riga
 ghc-options: -Wall
 hs-source-dirs: src, src-pgf
 default-language: Haskell2010
 default-extensions:
  LambdaCase,
  GeneralizedNewtypeDeriving,
  DeriveDataTypeable,
  DeriveGeneric
 build-depends:
  base >= 4.8 && < 4.10,
  mtl >= 2.2.1 && < 2.3,
  containers >= 0.5 && <= 0.6,
  array,
  bytestring,
  utf8-string,
  random,
  pretty,
  exceptions,
  base64-bytestring,
  text
 if impl(ghcjs)
  build-depends: ghcjs-base
  js-sources:
   jsbits/base64js.min.js
   jsbits/kosmos.js

 exposed-modules: 
  PGF
  PGF.Internal
  PGF.Lexing
  PGF.LexingAGreek
  PGF.Utilities
  PGF.Haskell

 other-modules:
  PGF.Data
  PGF.Macros
  PGF.Binary
  PGF.Optimize
  PGF.Printer
  PGF.CId
  PGF.Expr
  PGF.Generate
  PGF.Linearize
  PGF.Morphology
  PGF.Paraphrase
  PGF.Parse
  PGF.Probabilistic
  PGF.SortTop
  PGF.Tree
  PGF.Type
  PGF.TypeCheck
  PGF.Forest
  PGF.TrieMap
  PGF.VisualizeTree
  PGF.ByteCode
  PGF.OldBinary
  
 hs-source-dirs: src-pgf-binary
 other-modules:
  Data.Binary
  Data.Binary.Put
  Data.Binary.Get
  Data.Binary.Builder
  Data.Binary.IEEE754
  
executable kosmos
 default-language: Haskell2010
 hs-source-dirs: src-cli
 main-is: kosmos-cli.hs
 ghc-options: -Wall
 build-depends: kosmos,
   base >= 4.8 && < 4.10,
   reflex, reflex-dom,
   text, containers
 if impl(ghcjs)
   build-depends: ghcjs-base
